<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAnnouncement">

    <EditText
        android:id="@+id/announcementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/announcementtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <EditText
        android:id="@+id/announcementNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/announcementnote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcementTitle"
        />
    <Button
        android:id="@+id/add_announcement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/announcementNote"
        android:onClick="submit"
        />
</androidx.constraintlayout.widget.ConstraintLayout>